# pygamlastan

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Cargo.toml  README.md  build-wheels.sh  pyproject.toml
.github/scripts/: setup-manylinux-build-env.sh
.github/workflows/: ci.yml  release.yml
adr/: 0001-profile-extension-surface.md  0002-parse-secure-untrusted-xml.md  0004-single-logout-binding.md  0005-attribute-release-policy-surface.md  README.md
docs/: Makefile  conf.py  exceptions.rst  index.rst  installation.rst  quickstart.rst
docs/adr/: 0003-authn-instant-response-times.md  0006-metadata-extension-accessors.md  0007-pysaml2-compat-shim.md  README.md
docs/api/: attribute_map.rst  bindings.rst  core.rst  crypto.rst  idp.rst  logout.rst  metadata.rst  profiles.rst  security.rst  xml.rst
docs/guides/: attributes.rst  bindings.rst  idp_integration.rst  metadata.rst  profile_worked_example.rst  pysaml2_compat.rst  security.rst  signing.rst  sp_integration.rst  validation.rst  writing_profiles.rst
examples/: .env-example  .gitignore  Caddyfile  README.md  docker-compose.yml  justfile
examples/django-idp/: .dockerignore  .env-example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  justfile  manage.py  pyproject.toml
examples/django-idp/config/: settings.py  urls.py
examples/django-idp/idp/: apps.py  checks.py  idp_config.py  saml_logic.py  sp_resolver.py  urls.py  views.py
examples/django-idp/idp/management/commands/: idp_keys.py  seed_demo.py
examples/django-idp/idp/templates/idp/: base.html  error.html  index.html  login.html
examples/django-sp/: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
examples/django-sp/config/: settings.py  urls.py
examples/django-sp/sp/: apps.py  checks.py  idp_resolver.py  saml_logic.py  sp_config.py  urls.py  views.py
examples/django-sp/sp/management/commands/: sp_keys.py
examples/django-sp/sp/templates/sp/: base.html  error.html  index.html
python/pygamlastan/: __init__.py  __init__.pyi  attribute_map.pyi  bindings.pyi  core.pyi  crypto.pyi  idp.pyi  logout.pyi  metadata.pyi  profiles.pyi  security.pyi  xml.pyi
python/pygamlastan/compat/: __init__.py
python/pygamlastan/compat/saml2/: __init__.py  cache.py  client.py  config.py  ident.py  metadata.py  response.py  s_utils.py  saml.py  server.py  sigver.py  typing.py
python/pygamlastan/compat/saml2/attributemaps/: __init__.py
src/: attribute_map.rs  bindings.rs  convert.rs  core.rs  crypto.rs  errors.rs  idp.rs  lib.rs  logout.rs  metadata.rs  profiles.rs  security.rs  xml.rs
tests/: conftest.py  test_compat_saml2.py  test_pygamlastan.py
