[package]
name = "pygamlastan"
version = "0.1.1"
edition = "2021"
description = "Python bindings for the gamlastan SAML 2.0 library"
license = "BSD-2-Clause"
repository = "https://github.com/kushaldas/pygamlastan"

[lib]
name = "pygamlastan"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module", "abi3-py310", "chrono"] }
gamlastan = "0.5.0"
kryptering = "0.3"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
base64 = "0.22"
