[package]
name = "pygamlastan"
version = "0.3.0"
edition = "2021"
description = "Python bindings for the gamlastan SAML 2.0 library"
license = "BSD-2-Clause"
repository = "https://github.com/kushaldas/pygamlastan"

[lib]
name = "pygamlastan"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module", "abi3-py310", "chrono"] }
gamlastan = "0.6.0"
# Mirror gamlastan 0.6's kryptering features so the shared `Signer` /
# `Pkcs11Signer` types resolve to a single instance with no version or feature
# drift across the FFI boundary.
kryptering = { version = "0.4.0", default-features = false, features = ["legacy", "post-quantum", "pkcs11"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
base64 = "0.22"
